deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ${NAMESPACE}.${DOMAIN}
      http:
        paths:
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  number: 8080
#          - path: /(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: aks-helloworld
#                port:
#                  number: 80
